--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,15 +1,17 @@
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container topnavlinks">
-        <div class="navbar-header">
+            <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="fa fa-home fa-lg navbar-brand" href="index.html">&nbsp;<span class="projectTitle"> {{site.topnav_title}}</span></a>
-        </div>
+            <div class="logo">
+<figure><a class="no_icon" target="_self" href="/"><img class="docimage" src="/images/company_logo_white_header.png" alt="Askdata Documentation home" style="width:158px;padding:10px"> </a></figure>
+
+</div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <!-- toggle sidebar button -->
