--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
 <link rel="stylesheet" href="https://docs.askdata.com/css/modern-business.css">
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 <link rel="stylesheet" href="https://docs.askdata.com/css/customstyles.css">
 <link rel="stylesheet" href="https://docs.askdata.com/css/boxshadowproperties.css">
 <!-- most color styles are extracted out to here -->
@@ -26,10 +27,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- Anchor.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.2.0/anchor.min.js"></script>
-<script src="https://docs.askdata.com/{{ "js/toc.js" }}"></script>
-<script src="https://docs.askdata.com/{{ "js/customscripts.js" }}"></script>
+<script src="https://docs.askdata.com/js/toc.js"></script>
+<script src="https://docs.askdata.com/js/customscripts.js"></script>
 
-<link rel="shortcut icon" href="https://docs.askdata.com/{{ "images/favicon.ico"  }}">
+<link rel="shortcut icon" href="https://docs.askdata.com/images/favicon.ico">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
