--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -30,7 +30,7 @@
                             SimpleJekyllSearch.init({
                                 searchInput: document.getElementById('search-input'),
                                 resultsContainer: document.getElementById('results-container'),
-                                dataSource: 'https://docs.askdata.com/search.json',
+                                dataSource: '{{ "search.json" }}',
                                 searchResultTemplate: '<li><a href="{url}" title="{{page.title | escape }}">{title}</a></li>',
                     noResultsText: '{{site.data.strings.search_no_results_text}}',
                             limit: 10,
