--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,46 +1,54 @@
-<!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container topnavlinks">
-            <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="logo">
+<div class="navbar navbar-inverse navbar-static-top" role="navigation" style="
+    padding-top: 5px;
+">
+<div class="container topnavlinks">
+    <div class="navbar-header">
+        <div class="logo">
 <figure><a class="no_icon" target="_self" href="/"><img class="docimage" src="/images/company_logo_white_header.png" alt="Askdata Documentation home" style="width:158px;padding:10px"> </a></figure>
 
 </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <!-- toggle sidebar button -->
-                <li><a id="tg-sb-link" href="#"><i id="tg-sb-icon" class="fa fa-toggle-on"></i> Nav</a></li>
-                <!-- entries without drop-downs appear here -->
+        
+    </div>
 
-                <!--comment out this block if you want to hide search-->
-                <li>
-                    <!--start search-->
-                    <div id="search-demo-container">
-                        <input type="text" id="search-input" placeholder="{{site.data.strings.search_placeholder_text}}">
-                        <ul id="results-container"></ul>
-                    </div>
-                    <script src="https://docs.askdata.com/js/jekyll-search.js" type="text/javascript"></script>
-                    <script type="text/javascript">
-                            SimpleJekyllSearch.init({
-                                searchInput: document.getElementById('search-input'),
-                                resultsContainer: document.getElementById('results-container'),
-                                dataSource: 'https://docs.askdata.com/search.json',
-                                searchResultTemplate: '<li><a href="{url}" title="{{page.title | escape }}">{title}</a></li>',
-                    noResultsText: '{{site.data.strings.search_no_results_text}}',
-                            limit: 10,
-                            fuzzy: true,
-                    })
-                    </script>
+    <div class="collapse navbar-collapse navbar-ex1-collapse" style="">
+
+        <ul class="nav navbar-nav">
+            <li><a href="https://docs.askdata.com">Documentation</a></li>
+            
+            
+            
+            
+            
+        </ul>
+
+        <div class="col-sm-3 col-md-3 pull-right">
+        
+
+<form class="navbar-form" role="search">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="search-input" id="search-input" placeholder="{{site.data.strings.search_placeholder_text}}">
+<ul id="results-container"></ul>>
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+        </div>
+        </form>
+        </div>
+    </div>
+    </div>
+</div>
+
+
+<script src="https://docs.askdata.com/js/jekyll-search.js" type="text/javascript"></script>
+<script type="text/javascript">
+        SimpleJekyllSearch.init({
+            searchInput: document.getElementById('search-input'),
+            resultsContainer: document.getElementById('results-container'),
+            dataSource: 'https://docs.askdata.com/search.json',
+            searchResultTemplate: '<li><a href="{url}" title="{{page.title | escape }}">{title}</a></li>',
+noResultsText: '{{site.data.strings.search_no_results_text}}',
+        limit: 10,
+        fuzzy: true,
+})
+</script>
                     <!--end search-->
-                </li>
-            </ul>
-        </div>
-        </div>
-        <!-- /.container -->
-</nav>
