--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -27,7 +27,6 @@
 <form class="navbar-form" role="search">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="search-input" id="search-input" placeholder="{{site.data.strings.search_placeholder_text}}">
-<ul id="results-container"></ul>>
             <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
@@ -38,6 +37,7 @@
     </div>
 </div>
 
+<ul id="results-container"></ul>
 
 <script src="https://docs.askdata.com/js/jekyll-search.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -51,4 +51,3 @@ noResultsText: '{{site.data.strings.search_no_results_text}}',
         fuzzy: true,
 })
 </script>
-                    <!--end search-->
