--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,9 @@
   <div id="main">
     <!-- Content Row -->
     <div class="row">
+
+        <div>This url: {{page.url}}</div>
+
         {% assign content_col_size = "col-md-12" %}
         {% unless page.hide_sidebar %}
             <!-- Sidebar Column -->
