--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -37,7 +37,9 @@
     </div>
 </div>
 
-<ul id="results-container"></ul>
+<div class="container">
+    <ul id="results-container"></ul>
+</div>
 
 <script src="https://docs.askdata.com/js/jekyll-search.js" type="text/javascript"></script>
 <script type="text/javascript">
