--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -3,8 +3,14 @@ layout: default
 ---
 
 <div class="post-header">
-   <h1 class="post-title-main">{{ page.title }}</h1>
+   <h1 class="post-title-main"></h1>
 </div>
+
+<div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
+            <a class="" href="https://github.com/AskdataHQ/docs/blob/gh-pages/{{ page.url | remove: ".html"}}.md" title="View and edit this file on GitHub" target="_blank" rel="">Contribute on GitHub</a>
+            <h1 class="bd-title" id="content">{{ page.title }}
+    </h1>
+          </div>
 
 {% if page.simple_map == true %}
 
