--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -15,15 +15,10 @@
         <ul class="nav navbar-nav">
             <li><a href="https://docs.askdata.com">Documentation</a></li>
             
-            
-            
-            
-            
         </ul>
 
         <div class="col-sm-3 col-md-3 pull-right">
         
-
 <form class="navbar-form" role="search">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="search-input" id="search-input" placeholder="{{site.data.strings.search_placeholder_text}}">
@@ -38,7 +33,18 @@
 </div>
 
 <div class="container">
-    <ul id="results-container"></ul>
+    <ul id="results-container" style="background-color: rgb(233, 242, 255);
+border-color: rgb(167, 190, 225);
+border-radius: 16px;
+border-style: solid;
+border-width: 1px;
+border-color: rgb(167, 190, 225);
+border-style: solid;
+border-width: 1px;
+box-sizing: border-box;
+color: rgb(38, 118, 244);
+padding-top:15px;
+padding-bottom:10px"></ul>
 </div>
 
 <script src="https://docs.askdata.com/js/jekyll-search.js" type="text/javascript"></script>
