--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -7,7 +7,7 @@ layout: default
 </div>
 
 <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
-            <a class="" href="https://github.com/AskdataHQ/docs/blob/gh-pages{{ page.url | remove: ".html" }}.md" title="View and edit this file on GitHub" target="_blank" rel="">Contribute on GitHub</a>
+            <a class="" href="https://github.com/AskdataHQ/docs/blob/gh-pages{{ page.url | remove: ".html" }}.md" title="View and edit this file on GitHub" target="_blank" rel="">Improve this page on GitHub</a>
             <h1 class="bd-title" id="content">{{ page.title }}
     </h1>
           </div>
