--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -33,18 +33,20 @@
 </div>
 
 <div class="container">
-    <ul id="results-container" style="background-color: rgb(233, 242, 255);
-border-color: rgb(167, 190, 225);
-border-radius: 16px;
-border-style: solid;
-border-width: 1px;
-border-color: rgb(167, 190, 225);
-border-style: solid;
-border-width: 1px;
-box-sizing: border-box;
-color: rgb(38, 118, 244);
-padding-top:15px;
-padding-bottom:10px"></ul>
+    <ul id="results-container" style="
+    display:none;
+    background-color: rgb(233, 242, 255);
+    border-color: rgb(167, 190, 225);
+    border-radius: 16px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(167, 190, 225);
+    border-style: solid;
+    border-width: 1px;
+    box-sizing: border-box;
+    color: rgb(38, 118, 244);
+    padding-top:15px;
+    padding-bottom:10px"></ul>
 </div>
 
 <script src="https://docs.askdata.com/js/jekyll-search.js" type="text/javascript"></script>
