--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
                 <div class="col-lg-12 footer">
                &copy;{{ site.time | date: "%Y"  }} {{site.company_name}}. All rights reserved. <br />
 {% if page.last_updated %}<span>Page last updated:</span> {{page.last_updated}}<br/>{% endif %} Site last generated: {{ site.time | date: "%b %-d, %Y"  }} <br />
-<p><img src="https://docs.askdata.comimages/company_logo.png" style="width:120px" alt="Company logo"/></p>
+<p><img src="https://docs.askdata.com/images/company_logo.png" style="width:120px" alt="Company logo"/></p>
                 </div>
             </div>
 </footer>
