--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -17,7 +17,7 @@
             
         </ul>
 
-        <div class="col-sm-3 col-md-3 pull-right">
+        <div class="col-sm-3 col-md-3 pull-right" style="display:inline-block; width:480px">
         
 <form class="navbar-form" role="search">
         <div class="input-group">
@@ -26,6 +26,7 @@
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
+       <a target="_blank" rel="noopener" href="https://github.com/AskdataHQ/docs/tree/gh-pages/" class="btn btn-default githubEditButton" role="button"><i class="fa fa-github fa-lg"></i> Contribute</a>
         </form>
         </div>
     </div>
