--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,11 @@
 
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P327BN7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+    
 {% include topnav.html %}
 <!-- Page Content -->
 <div class="container">
