--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,14 +34,10 @@
 
         });
 
-        // This function highlights the section that is selected. 
-        $(document).ready(function(){
+        $(document).ready(function(){            
             try{
-                page_url = window.location;
-                console.log(page_url);
-                var li_selected = $('a[href=page_url]').parent();
-                console.log(li_selected);
-                li_selected[0].classList.add("active");
+            var li_detected = $('a[href="'+ window.location.href +'"]').parent();
+            li_detected[0].classList.add("active");
             }
             catch(error){};
         });
