Added Components in How to create a Data Card

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
             });
 
         });
+        // function to highlight the section of the submenu 
+        // Identify the link of the page, check which <a> attribute has it as href, take its parent and make it active.
 
         $(document).ready(function(){            
             try{
