--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,8 +13,11 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse" style="">
 
         <ul class="nav navbar-nav">
-            <li><a href="https://docs.askdata.com">Documentation</a></li>
-            
+            <li><a href="/">Documentation</a></li>
+        </ul>
+        
+        <ul class="nav navbar-nav">
+            <li><a href="/blog">Blog</a></li>
         </ul>
 
         <div class="col-sm-3 col-md-3 pull-right" style="display:inline-block; width:480px">
